--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^1.0.0",
-    "@genkit-ai/next": "^1.0.0",
+    "@genkit-ai/google-genai": "latest",
+    "@genkit-ai/next": "latest",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -44,7 +44,7 @@
     "firebase": "^11.9.1",
     "genkit": "latest",
     "lucide-react": "^0.475.0",
-    "next": "14.2.35",
+    "next": "14.2.3",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-day-picker": "^9.11.3",
